Enhance BacktrackStrategy with checkpoint candidate evaluation and opportunistic guidance